--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REACT_APP_API_CODE="qubit-tech"
-# REACT_APP_BACKEND="https://yourindianshop.com"
-REACT_APP_BACKEND="http://localhost:4000"
+REACT_APP_BACKEND="https://yourindianshop.com"
+#REACT_APP_BACKEND="http://localhost:4000"
 REACT_APP_FILES="https://yourindianshop.com/upload"
 REACT_APP_URL= "https://yourindianshop.com/files"
 
