--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
     "react-fast-marquee": "^1.6.2",
+    "react-icons": "^4.12.0",
     "react-parallax-tilt": "^1.7.68",
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.14.2",
