--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ REACT_APP_PAYPAL_CLIENTID = "AWBkL5jCFuAzDtn3dF9bJvyMFnokFWxWsqfDpkpFaEQHjN_y4tq
 
 REACT_APP_PAYPAL_CURENCY= "usd"
 # REACT_APP_PAYPAL_BASE= "https://api-m.paypal.com"
+
+REACT_APP_CLIENTID = "rzp_test_afTOu5MYpYYgmn"
