--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 REACT_APP_API_CODE="qubit-tech"
-# REACT_APP_BACKEND="https://yourindianshop.com"
-REACT_APP_BACKEND="http://localhost:4000"
+REACT_APP_BACKEND="https://yourindianshop.com"
+# REACT_APP_BACKEND="http://localhost:4000"
 REACT_APP_FILES="https://yourindianshop.com/upload"
 REACT_APP_URL= "https://yourindianshop.com/files"
 REACT_APP_PAYPAL_CLIENTID = "AWBkL5jCFuAzDtn3dF9bJvyMFnokFWxWsqfDpkpFaEQHjN_y4tqzapCKdwkk5lSHbSGfvDkc3L1fJ_50"
 
-REACT_APP_PAYPAL_CURENCY= "usd"
+REACT_APP_PAYPAL_CURENCY= "INR"
 # REACT_APP_PAYPAL_BASE= "https://api-m.paypal.com"
 
 REACT_APP_CLIENTID = "rzp_test_afTOu5MYpYYgmn"
