--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 REACT_APP_API_CODE="qubit-tech"
-# REACT_APP_BACKEND="https://yourindianshop.com"
-REACT_APP_BACKEND="http://localhost:4000"
+REACT_APP_BACKEND="https://yourindianshop.com"
+# REACT_APP_BACKEND="http://localhost:4000"
 REACT_APP_FILES="https://yourindianshop.com/upload"
 REACT_APP_URL= "https://yourindianshop.com/files"
 # REACT_APP_PAYPAL_CLIENTID = "AWBkL5jCFuAzDtn3dF9bJvyMFnokFWxWsqfDpkpFaEQHjN_y4tqzapCKdwkk5lSHbSGfvDkc3L1fJ_50" #yis
-REACT_APP_PAYPAL_CLIENTID = "ASMQ8cIBYPm5-ZaxGZhFpodBXIF0n2PBlfyO8mlmGZxoiH0ejWvXGHuZJ3YMH48nocz-2f28DoMhk-ze" 
+REACT_APP_PAYPAL_CLIENTID = ASMQ8cIBYPm5-ZaxGZhFpodBXIF0n2PBlfyO8mlmGZxoiH0ejWvXGHuZJ3YMH48nocz-2f28DoMhk-ze
 REACT_APP_PAYPAL_CLIENTSEC=  "EEzJd0u4p4RrXmet2UMy54lmZ1RZtTEzz8WGBlQj57xtsC0mC3bSik720AL-dyM1RtHdYvNjgtcT3jEa"
 REACT_APP_PAYPAL_CURENCY= "USD"
 # REACT_APP_PAYPAL_BASE= "https://api-m.paypal.com"
