--- a/.env
+++ b/.env
@@ -4,8 +4,8 @@ REACT_APP_BACKEND="https://yourindianshop.com"
 REACT_APP_FILES="https://yourindianshop.com/upload"
 REACT_APP_URL= "https://yourindianshop.com/files"
 # REACT_APP_PAYPAL_CLIENTID = "AWBkL5jCFuAzDtn3dF9bJvyMFnokFWxWsqfDpkpFaEQHjN_y4tqzapCKdwkk5lSHbSGfvDkc3L1fJ_50" #yis
-REACT_APP_PAYPAL_CLIENTID = ASMQ8cIBYPm5-ZaxGZhFpodBXIF0n2PBlfyO8mlmGZxoiH0ejWvXGHuZJ3YMH48nocz-2f28DoMhk-ze
-REACT_APP_PAYPAL_CLIENTSEC=  "EEzJd0u4p4RrXmet2UMy54lmZ1RZtTEzz8WGBlQj57xtsC0mC3bSik720AL-dyM1RtHdYvNjgtcT3jEa"
+REACT_APP_PAYPAL_CLIENTID = "AWlqSbSSoQSKtfFb_QR9bzF7IoyK8c8ZLfGGkS2LaGMo8QR6nUnXhA22VbJI2hlHKM4LNFoC_dC50_ws"
+REACT_APP_PAYPAL_CLIENTSEC=  "ELhSUHgHJkD9bREfztoYBjrZpOQYfCwu5QhYJzZ06o-XOFEnJyAqNn229ThLvZcgg7yNz_eJgS8ekdcZ"
 REACT_APP_PAYPAL_CURENCY= "USD"
 # REACT_APP_PAYPAL_BASE= "https://api-m.paypal.com"
 
