--- a/package.json
+++ b/package.json
@@ -28,9 +28,11 @@
     "react-reveal": "^1.2.2",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "react-slick": "^0.29.0",
     "react-to-print": "^2.14.13",
     "sass": "^1.55.0",
     "scss": "^0.2.4",
+    "slick-carousel": "^1.8.1",
     "swiper": "^11.0.4",
     "web-vitals": "^2.1.4"
   },
