--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "sass": "^1.55.0",
     "scss": "^0.2.4",
     "slick-carousel": "^1.8.1",
+    "styled-components": "^6.1.8",
     "swiper": "^11.0.4",
     "web-vitals": "^2.1.4"
   },
