--- a/package.json
+++ b/package.json
@@ -10,14 +10,18 @@
     "@mui/icons-material": "^5.14.3",
     "@mui/material": "^5.14.5",
     "@paypal/react-paypal-js": "^8.1.3",
+    "@radix-ui/react-icons": "^1.3.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.1",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "dotenv": "^16.3.1",
     "emailjs": "^4.0.2",
     "emailjs-com": "^3.2.0",
     "firebase": "^10.4.0",
+    "lucide-react": "^0.323.0",
     "luxon": "^3.4.2",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.5",
@@ -34,7 +38,9 @@
     "scss": "^0.2.4",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.8",
-    "swiper": "^11.0.4",
+    "swiper": "^11.0.6",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "web-vitals": "^2.1.4"
   },
   "eslintConfig": {
